[package]
name = "lay-steane"
version = "0.1.0"
authors = ["gyu-don <takumi.kt+git@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lay = { path = "../lay" }
lay-simulator-gk = { path = "../lay-simulator-gk" }
